--- a/lab-2/css/style.css
+++ b/lab-2/css/style.css
@@ -1,50 +1,32 @@
-body {
-     background: #FFF;
-     color: #000;
-     font-family: Arial, sans-serif;
-     font-size: 14px;
-}
-
-#header {
-     background: #F5DEB3;
-     width: 100%;
-     height: 55px;
-}
- 
-#container {
-     background: #FFD700;
-     margin: auto auto;
-     text-align: center;
+#container{
      width: 100%;
      height: 100%;
 }
- 
-#navigation {
-     background: #FE9798;
-     width: 100%;
-     height: 25px;
-}
- 
-#sidebar {
-     background: #40E0D0;
+
+#block2{
      float: left;
-     width: 20%;
-     height: 280px;
+     background-color: #e1fc54;
 }
 
-#content {
-     background: #DCDCDC;
+
+#block5{
+     float: left;
+     background-color: #e1fc54;
+}
+
+#block4{
      float: right;
-     width: 80%;
-     height: 280px;
+     background-color: #c862ae;
 }
- 
-#clear {
-     clear: both;
+
+#block3{
+     background-color: #e1fc54;
 }
- 
-#footer {
-    background: #00BFFF;
-	width: 100%;
-	height: 40px;
+
+#header{
+     background-color: #535f98;
+}
+
+footer {
+     background-color: #21d711;
 }
