--- a/lab-2/css/style.css
+++ b/lab-2/css/style.css
@@ -1,32 +1,38 @@
-#container{
-     width: 100%;
-     height: 100%;
+body, h2, p{
+ margin:0;
+ padding:0;
 }
 
-#block2{
+html, body{
+height: 100%;
+font-size: 18px;
+}
+
+
+div{
+     border: 1px solid black;
+}
+
+#footer, #header{ 
+ background-color: #eee;
+ border-bottom: 1px solid #ccc;
+ height: 16vh;
+}
+
+#main{
+     position: relative;
+     background-color: #f7f7f7;
+}
+
+#content{
+     float:right;
+     background-color: lightblue;
+     width: 50%;
+}
+
+#right-sidebar{
+     
      float: left;
-     background-color: #e1fc54;
-}
-
-
-#block5{
-     float: left;
-     background-color: #e1fc54;
-}
-
-#block4{
-     float: right;
-     background-color: #c862ae;
-}
-
-#block3{
-     background-color: #e1fc54;
-}
-
-#header{
-     background-color: #535f98;
-}
-
-footer {
-     background-color: #21d711;
+     background-color: red;
+     width: 25%;
 }
