--- a/lab-2/css/index.css
+++ b/lab-2/css/index.css
@@ -9,32 +9,34 @@ html, body{
     height: 100%;
 }
 
-#content > div, #main > div{
+div{
     text-align: center;
     border: 0.05em solid white;
 }
 
 #content {
+    position: relative;
     width: 100%;
     height: 85%;
     text-align: center;
 }
 
-#header, #footer{
+#header{
     height: 15%;
     width: 100%;
     background-color: rgb(0, 73, 6);
     color: sandybrown;
 }
 
-#main{
-     height: 100%;
-     width: 75%;
-     float: left;
+
+#left-sidebar{
+    float: left;
+    width: 25%;
+    height: 85%;
+    background-color: gray;
 }
 
-
-#sidebar{
+#right-sidebar{
      float: right;
      width: 25%;
      height: 100%;
@@ -43,27 +45,30 @@ html, body{
 
 #data-cell2{
     background-color: lightblue;
-    float: right;
+    float: left;
     height: 85%;
-    width: 65%;
+    width: 50%;
 }
 
 #data-cell4{
     background-color: yellow;
     float: left;
-    height: 42.5%;
-    width: 35%;
+    height: 50%;
+    width: 100%;
 }
 
 #data-cell3{
     background-color: lightgreen;
     float: left;
-    height: 42.5%;
-    width: 35%;
+    height: 50%;
+    width: 100%;
 }
 
 
 #footer{
+    height: 15%;
+    width: 75%;
     float: left;
+    background-color: green;
 }
 
