--- a/lab-2/css/index.css
+++ b/lab-2/css/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:display=swap"');
 * {
      margin: 0;
-     font-family: 'Baloo Tammudu 2', cursive;
+     font-family: 'Baloo Tammudu 2';
     box-sizing: border-box;
 }
 
@@ -9,7 +9,7 @@ html, body{
     height: 100%;
 }
 
-div{
+#content, #content > div{
     text-align: center;
     border: 0.05em solid white;
 }
@@ -17,17 +17,30 @@ div{
 #content {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 85%;
     text-align: center;
 }
 
 #header{
+    padding: 0 1em;
+    font-size: 18px;
+    padding: 0 1em;
     height: 15%;
     width: 100%;
-    background-color: rgb(0, 73, 6);
+    background-color: rgb(80, 42, 99);
     color: sandybrown;
 }
 
+nav{
+    display: block;
+}
+
+#header > h1 {
+
+    text-align: right;
+    font-size: 25px;
+    font-weight: bold;  
+}
 
 #left-sidebar{
     float: left;
