--- a/lab-2/css/flex.css
+++ b/lab-2/css/flex.css
@@ -1,68 +1,96 @@
-
-
 .flex-container {
 	display: flex;
 	width: 100%;
 	height: 85vh;    
 	flex-flow: column wrap;
 	align-items: flex-start;
+	text-align: center;
 }
-
 
 body {
 	margin: 0;
 }
 
-header{
-	background-color: #675ba7;
+ul {
+	list-style-type: square;
+	font-family: Verdana;
+	text-align: left;
+	padding: 2em;
+}
+
+header, .footer{
+	background-color: rgb(255, 244, 0);
+	font-family: Verdana;
+	font-weight: bold;
+}
+
+nav > a {
+	padding: 2em;
+    color: black;
+    font-size: 32px;
+}
+
+header > h1 {
+    text-align: right;
+    font-size: 25px;
+    font-weight: bold;  
+    padding: 0 1em;
+}
+
+.footer > h1 {
+	float: left;
+	padding: 0.5em;
+}
+.footer > p {
+    float: right;
+    padding: 0 2em;
+    font-size: 18px;
+}
+
+.flex-item > p{
+	padding: 1em;
+	font-family: Verdana, sans-serif;
+} 
+
+
+header {
 	height: 15vh;   
 	width: 100%;
 }
 
-header > h1 {
-	text-align: right;
-	margin: 0;
-	padding: 0.5em;
-}
-
-.flex-item {
-	text-align: center;
-	font-size: 1em;
-}
 
 .color1 {
+	background-color: rgb(120, 120, 120);
 	height: 35vh;
 	width: 25%;
-	background-color: #675ba7;
 	order: 1;
 }
 
 .color2 { 
+	background-color: #f0f8ff;
 	margin-left: -50%; 
 	width: 50%;
 	height: 70vh;
-	background-color: #9bc850;
 	order: 4;
 }
 
 .color3 {
+	background-color: rgb(120, 120, 120);
 	height: 85vh;
 	width: 25%;
-	background-color: #a62e5c;
 	order: 5;
 }
 
 .color4 {
+	background-color: rgb(120, 120, 120);
 	height: 35vh;
 	width: 25%;
-	background-color: green;
 	order: 2;
 }
 
-.color5 {
+.footer {
 	order: 4;
 	width: 75%;
 	height: 15vh;
-	background-color: #f15b2a;
 	order: 3;
 }
