--- a/lab-2/css/grid.css
+++ b/lab-2/css/grid.css
@@ -1,53 +1,84 @@
-/* Keyword value */
-grid-template: none;
-
-/* grid-template-rows / grid-template-columns values */
-grid-template: 100px 1fr / 50px 1fr;
-grid-template: auto 1fr / auto 1fr auto;
-grid-template: [linename] 100px / [columnname1] 30% [columnname2] 70%;
-grid-template: fit-content(100px) / fit-content(40%);
-
-/* grid-template-areas grid-template-rows / grid-template-column values */
-grid-template: "a a a"
-               "b b b";
-grid-template: "a a a" 20%
-               "b b b" auto;
-grid-template: [header-top] "a a a"     [header-bottom]
-                 [main-top] "b b b" 1fr [main-bottom]
-                            / auto 1fr auto;
-
-/* Global values */
-grid-template: inherit;
-grid-template: initial;
-grid-template: unset;
-
-
-#page {
+.grid-container {
   display: grid;
-  width: 100%;
-  height: 80%;
-  grid-template: [header-left] "head head" 30px [header-right]
-                 [main-left]   "nav  main" 1fr  [main-right]
-                 [footer-left] "nav  foot" 30px [footer-right]
-                 / 120px 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 15% 1fr 1fr 1fr 1fr 15%;
+  gap: 0px 0px;
+  grid-template-areas:
+    "header header header header"
+    "box-1 box-2 box-2 sidebar"
+    "box-1 box-2 box-2 sidebar"
+    "box-3 box-2 box-2 sidebar"
+    "box-3 box-2 box-2 sidebar"
+    "footer footer footer sidebar";  
+  height: 100vh;
 }
 
-header {
-  background-color: lime;
-  grid-area: head;
+body{
+  margin: 0;
 }
 
-nav {
-  background-color: lightblue;
-  grid-area: nav;
+.sidebar { grid-area: sidebar;
 }
 
-main {
-  background-color: yellow;
-  grid-area: main;
+.header { grid-area: header;
 }
 
-footer {
-  background-color: red;
-  grid-area: foot;
+.box-2 { grid-area: box-2;
 }
+
+.box-1 { grid-area: box-1; 
+}
+
+.box-3 { grid-area: box-3; 
+
+}
+
+.footer { grid-area: footer; 
+}
+
+.header, .footer{
+  background-color: rgb(255, 244, 0);
+  font-family: Verdana;
+  font-weight: bold;
+}
+
+nav > a {
+  padding: 2em;
+    color: black;
+    font-size: 32px;
+}
+
+.header > h1 {
+    float: right;
+    font-size: 25px;
+    font-weight: bold;  
+    padding: 0 1em;
+}
+
+.footer > h1 {
+  float: left;
+  padding: 0.5em;
+}
+
+.footer > p {
+    float: right;
+    padding: 0 2em;
+    font-size: 18px;
+}
+
+ul {
+  list-style-type: disc;
+  font-family: Verdana;
+  text-align: left;
+  padding: 2em;
+}
+
+.grid-item, .sidebar {
+  background-color: rgb(175, 207, 175);
+}
+
+.grid-item p{
+  text-align: center;
+  padding: 1em;
+  font-family: Verdana, sans-serif;
+} 
