--- a/lab-2/css/grid.css
+++ b/lab-2/css/grid.css
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 15% 1fr 1fr 1fr 1fr 15%;
-  gap: 0px 0px;
   grid-template-areas:
     "header header header header"
     "box-1 box-2 box-2 sidebar"
@@ -17,23 +16,28 @@ body{
   margin: 0;
 }
 
-.sidebar { grid-area: sidebar;
+.sidebar { 
+  grid-area: sidebar;
 }
 
-.header { grid-area: header;
+.header { 
+  grid-area: header;
 }
 
-.box-2 { grid-area: box-2;
+.box-2 { 
+  grid-area: box-2;
 }
 
-.box-1 { grid-area: box-1; 
+.box-1 { 
+  grid-area: box-1; 
 }
 
-.box-3 { grid-area: box-3; 
-
+.box-3 { 
+  grid-area: box-3; 
 }
 
-.footer { grid-area: footer; 
+.footer { 
+  grid-area: footer; 
 }
 
 .header, .footer{
@@ -45,12 +49,12 @@ body{
 nav > a {
   padding: 2em;
     color: black;
-    font-size: 32px;
+    font-size: 2em;
 }
 
 .header > h1 {
     float: right;
-    font-size: 25px;
+    font-size: 1.5em;
     font-weight: bold;  
     padding: 0 1em;
 }
@@ -63,7 +67,7 @@ nav > a {
 .footer > p {
     float: right;
     padding: 0 2em;
-    font-size: 18px;
+    font-size: 1em;
 }
 
 ul {
